--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+}
+.left{
+height: 100vh;
+}
+.img-login{
+  height: 100vh;
+  opacity: .7;
+}
+.right{
+  height: 100vh;
+  width: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
-
-.App-link {
-  color: #61dafb;
+.login-headers{
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  text-align: start;
+  flex-direction: column;
+  width: 300px;
 }
+.login-title{
+  font-weight: bold;
+  font-size: 34px;
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  line-height: 20px;
+}
+.login-subtitle{
+  font-family: 'Poppins', sans-serif;
+  color: gray;
+  padding-bottom: 20px;
+  width: 100%;
+  border-bottom: 1px solid #F5F5F5;
+}
+.login-label{
+  margin-top: 12px;
+  margin-bottom: 10px;
+  color: #696F79;
+  font-size: 16px;
+}
+.login-input{
+  width: 250px;
+  padding: 20px;
+  box-shadow: 0px 5px 15px 1px #EDEDED;
+  border-radius: 12px;
+  border: none;
+}
+.login-input::placeholder{
+ color: #8692A6;
+}
+.login-checbox{
+  margin-top: 12px;
+  font-weight: 500;
+  font-family: 'Poppins',sans-serif;
+  color:#696F79;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.login-button{
+  background: #8692A6;
+color: white;
+padding: 20px;
+width: 100%;
+border-radius: 30px;
+border: none;
+margin-top: 15px;
+font-size: 16px;
+}
+.login-line{
+  color: #BABABA;
+}
+.line-group{
+display: flex;
+
+justify-content: center;
+margin: 10px;
+}
+.line{
+  margin-top: 15px;
+  background-color: #F5F5F5;
+  width: 150px;
+  height: 1px;
+}
+.login-google{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  background: white;
+  color: black;
+  padding: 10px;
+  width: 100%;
+  border-radius: 30px;
+  border: none;
+  margin-top: 15px;
+  box-shadow: 0px 5.82667px 15.5378px 1.94222px #EDEDED
+}
+.google-img{
+  height: 30px;
+}
+.span-google{
+  font-size: 16px;
 }
