--- a/src/App.css
+++ b/src/App.css
@@ -96,10 +96,10 @@ margin: 10px;
   color: black;
   padding: 10px;
   width: 100%;
-  border-radius: 30px;
+  border-radius: 30px!important;
   border: none;
   margin-top: 15px;
-  box-shadow: 0px 5.82667px 15.5378px 1.94222px #EDEDED
+  /* box-shadow: 0px 5.82667px 15.5378px 1.94222px #EDEDED */
 }
 .google-img{
   height: 30px;
