--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,15 +1,39 @@
-.sidebar-container{
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
+.sidebar-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 300px;
 }
-.sidebar-top{
-    width: 100%;
+
+.sidebar-top {
+  width: 100%;
 }
-.sidebar-bottom{
-    width: 100%;
-    margin-left: 20px;
+
+.sidebar-bottom {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  margin-left: 20px;
+  width: 100%;
+}
+.sidebar-bottom-list {
+  padding: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sidebar-list {
+  padding: 0;
+  list-style: none;
+  width: 100%;
+}
+
+.links {
+  text-decoration: none;
 }
 
 .sidebar-header {
@@ -22,28 +46,44 @@ justify-content: center;
   line-height: 18px;
   color: #696f79;
 }
-.sidebar-button{
-    padding: 20px;
-    width: 100%;
+.sidebar-bottom-buttom {
+  width: 100%;
+}
+.sidebar-button {
+  align-items: center;
+  background: none;
+  border: none;
+  color: #696f79;
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  height: 20px;
+  justify-content: center;
+  margin-bottom: 20px;
+  padding: 20px;
+  width: 210px;
 }
 
 ul {
   list-style: none;
-}
-li {
-  cursor: pointer;
-  color: #696f79;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 24px;
   width: 100%;
-  height: 40px;
-  padding: 10px;
 }
-li:hover {
-  color: white;
+
+li {
+  align-items: center;
+  color: #696f79;
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  height: 20px;
+  justify-content: center;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  width: 70%;
+}
+li:hover,.sidebar-button:hover {
   background-color: #8692a6;
   border-radius: 12px;
+  color: white;
 }
